Add geojs & copy autogen files from ipywidgets_protos
Uses logic in pythreejs to gener

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -6,7 +6,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pygeojs import HelloWorld"
+    "from pygeojs import geomap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map = geomap()\n",
+    "layer = map.createLayer('osm')\n",
+    "map.center = {'x': -73.757400, 'y': 42.849560}  # (21 Corp Drive)\n",
+    "map.zoom = 6"
    ]
   },
   {
@@ -17,12 +29,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "def7520fdf1341d5888d60a7689e07e0",
+       "model_id": "d474e49372a042fbb830e3f250a2d178",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HelloWorld()"
+       "geomap(center={'x': -73.7574, 'y': 42.84956}, layout=Layout(align_self='stretch', height='400px'), zoom=6.0)"
       ]
      },
      "metadata": {},
@@ -30,8 +42,8 @@
     }
    ],
    "source": [
-    "hw = HelloWorld()\n",
-    "hw"
+    "from IPython.display import display\n",
+    "display(map)"
    ]
   },
   {
@@ -42,12 +54,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "def7520fdf1341d5888d60a7689e07e0",
+       "model_id": "5ca775b781fa492da0c2b06002f22c31",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HelloWorld(value='Modified World')"
+       "FloatSlider(value=5.0, layout=Layout(width='95%'), max=10.0, min=1.0)"
       ]
      },
      "metadata": {},
@@ -55,8 +67,10 @@
     }
    ],
    "source": [
-    "hw.value = 'Modified World'\n",
-    "hw"
+    "import ipywidgets as widgets\n",
+    "z = widgets.FloatSlider(min=1, max=10, value=5, layout=dict(width='95%'))\n",
+    "newlink = widgets.jslink((z, 'value'), (map, 'zoom'))\n",
+    "display(z)"
    ]
   },
   {
