--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pygeojs import geomap"
+    "from pygeojs import scene"
    ]
   },
   {
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "map = geomap()\n",
+    "map = scene()\n",
     "layer = map.createLayer('osm')\n",
     "map.center = {'x': -73.757400, 'y': 42.849560}  # (21 Corp Drive)\n",
     "map.zoom = 6"
