--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -6,16 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pygeojs import scene"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "map = scene()\n",
+    "import pygeojs\n",
+    "\n",
+    "map = pygeojs.scene()\n",
     "layer = map.createLayer('osm')\n",
     "map.center = {'x': -73.757400, 'y': 42.849560}  # (21 Corp Drive)\n",
     "map.zoom = 6"
@@ -23,18 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d474e49372a042fbb830e3f250a2d178",
+       "model_id": "f2a922d258104fb48248135b3829cda3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "geomap(center={'x': -73.7574, 'y': 42.84956}, layout=Layout(align_self='stretch', height='400px'), zoom=6.0)"
+       "scene(center={'y': 42.84956, 'x': -73.7574}, layout=Layout(align_self='stretch', height='400px'), zoom=6.0)"
       ]
      },
      "metadata": {},
@@ -48,13 +41,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5ca775b781fa492da0c2b06002f22c31",
+       "model_id": "933bde3a0dde428d9b697633c57050ed",
        "version_major": 2,
        "version_minor": 0
       },
