Sundries updates and corrections
* Fix python constructor args (class-config.js)
* Remove "new Document" code in scene.js
* Make map_id optional in layer constructors (eliminates custom
  osmLayer.py class; might reconsider later)
* Add workaround for using null for the default attribution
* Add custom message prototype; works py->js only.

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "import urllib\n",
+    "import json    # for formatting query string for large-image sytle\n",
+    "import urllib  # ditto\n",
     "from IPython.display import display\n",
     "import pygeojs\n",
     "\n",
@@ -26,22 +26,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://turtleland2:8989/api/v1/item/5bb7d7533b4e9a0007762163/tiles/zxy/{z}/{x}/{y}?encoding=PNG&projection=EPSG:3857&style=%7B%22max%22%3A+5000%2C+%22scheme%22%3A+%22linear%22%2C+%22band%22%3A+1%2C+%22palette%22%3A+%22matplotlib.Plasma_6%22%2C+%22min%22%3A+2000%7D\n"
+      "http://turtleland2:8989/api/v1/item/5bca474261700e00077b2220/tiles/zxy/{z}/{x}/{y}?encoding=PNG&projection=EPSG:3857\n",
+      "\n"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7e5806555c441eb8e6e7cf06bcc06e4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "scene(center={'y': 39.0, 'x': -107.0}, layout=Layout(align_self='stretch', height='400px'), zoom=9.0)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -51,7 +38,7 @@
     "scene.center = {'x': -107.0, 'y': 39.0}  # (Crested Butte, CO)\n",
     "scene.zoom = 9\n",
     "\n",
-    "lidar_id = '5bb7d7533b4e9a0007762163'\n",
+    "lidar_id = '5bca474261700e00077b2220'\n",
     "lidar_url = url_template.format(item_id=lidar_id)\n",
     "\n",
     "style = {\n",
@@ -63,11 +50,12 @@
     "}\n",
     "style_string = json.dumps(style)\n",
     "style_encoded = urllib.parse.quote_plus(style_string)\n",
-    "lidar_url = '{}&style={}'.format(lidar_url, style_encoded)\n",
+    "#lidar_url = '{}&style={}'.format(lidar_url, style_encoded)\n",
     "\n",
     "print(lidar_url)\n",
-    "lidar_layer = scene.createLayer('osm', url=lidar_url, keepLower=False, opacity=0.2)\n",
-    "display(scene)\n"
+    "lidar_layer = scene.createLayer('osm', url=lidar_url, keepLower=False)\n",
+    "#display(scene)\n",
+    "print(lidar_layer.attribution)"
    ]
   },
   {
@@ -78,7 +66,72 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "538c4aee92624869a5df25a42fdb1768",
+       "model_id": "e8b0c67774bb4883a5396156a72e5df1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "scene(center={'z': 0.0, 'x': -107.0, 'y': 38.99999999999997}, layout=Layout(align_self='stretch', height='400p…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(scene)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tile data &copy; <a href=\"http://osm.org/copyright\">OpenStreetMap</a> contributors 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(osm_layer.attribution, lidar_layer.zIndex)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#scene.send('A rat in Toms house')\n",
+    "msg = {'a': 'A rat in Toms house...', 'b': '...may eat Toms ice cream'}\n",
+    "scene.send(msg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#scene.on_msg('hell0?')\n",
+    "#from pygeojs import scene as scene_module\n",
+    "#scene_module._receive_message('anybody there?')\n",
+    "#print(dir(scene_module))\n",
+    "#scene._receive_message('anybody there?')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "abd3191530834df48e657465823010b1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -106,20 +159,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://turtleland2:8989/api/v1/item/5bb7d7543b4e9a000776216c/tiles/zxy/{z}/{x}/{y}?encoding=PNG&projection=EPSG:3857\n"
+      "http://turtleland2:8989/api/v1/item/5bca474461700e00077b2229/tiles/zxy/{z}/{x}/{y}?encoding=PNG&projection=EPSG:3857\n"
      ]
     }
    ],
    "source": [
     "# Test large-image (color)\n",
-    "#scene.center = {'x': -122.4, 'y': 37.8}  # (San Francisco)\n",
+    "scene.center = {'x': -122.4, 'y': 37.8}  # (San Francisco)\n",
     "\n",
-    "sf_id = '5bb7d7543b4e9a000776216c'  # San Francisco bay image\n",
+    "sf_id = '5bca474461700e00077b2229'  # San Francisco bay image\n",
     "sf_url = url_template.format(item_id=sf_id)\n",
     "print(sf_url)\n",
     "sf_layer = scene.createLayer('osm', url=sf_url, keepLower=False)\n",
     "#display(scene)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
