--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -26,7 +26,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://turtleland2:8989/api/v1/item/5bca474261700e00077b2220/tiles/zxy/{z}/{x}/{y}?encoding=PNG&projection=EPSG:3857\n",
+      "http://turtleland2:8989/api/v1/item/5bca474261700e00077b2220/tiles/zxy/{z}/{x}/{y}?encoding=PNG&projection=EPSG:3857&style=%7B%22max%22%3A+5000%2C+%22scheme%22%3A+%22linear%22%2C+%22band%22%3A+1%2C+%22min%22%3A+2000%2C+%22palette%22%3A+%22matplotlib.Plasma_6%22%7D\n",
       "\n"
      ]
     }
@@ -50,10 +50,10 @@
     "}\n",
     "style_string = json.dumps(style)\n",
     "style_encoded = urllib.parse.quote_plus(style_string)\n",
-    "#lidar_url = '{}&style={}'.format(lidar_url, style_encoded)\n",
+    "lidar_url = '{}&style={}'.format(lidar_url, style_encoded)\n",
     "\n",
     "print(lidar_url)\n",
-    "lidar_layer = scene.createLayer('osm', url=lidar_url, keepLower=False)\n",
+    "lidar_layer = scene.createLayer('osm', url=lidar_url, keepLower=False, opacity=0.2)\n",
     "#display(scene)\n",
     "print(lidar_layer.attribution)"
    ]
@@ -66,7 +66,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e8b0c67774bb4883a5396156a72e5df1",
+       "model_id": "3dfa7a5d5c1843eba0bddbe4fd3d3ec5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -84,30 +84,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tile data &copy; <a href=\"http://osm.org/copyright\">OpenStreetMap</a> contributors 1\n"
+     "ename": "NameError",
+     "evalue": "name 'osm_layer' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-3f03c6572960>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mosm_layer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mattribution\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlidar_layer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzIndex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'osm_layer' is not defined"
      ]
     }
    ],
    "source": [
     "print(osm_layer.attribution, lidar_layer.zIndex)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#scene.send('A rat in Toms house')\n",
-    "msg = {'a': 'A rat in Toms house...', 'b': '...may eat Toms ice cream'}\n",
-    "scene.send(msg)"
    ]
   },
   {
@@ -131,7 +124,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "abd3191530834df48e657465823010b1",
+       "model_id": "fd5f41294ea64ce29f7c6603a4309f86",
        "version_major": 2,
        "version_minor": 0
       },
@@ -172,6 +165,15 @@
     "print(sf_url)\n",
     "sf_layer = scene.createLayer('osm', url=sf_url, keepLower=False)\n",
     "#display(scene)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scene.send({'a': 'A rat in Toms house...', 'b': '...may eat Toms ice cream'})"
    ]
   },
   {
