--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -21,22 +21,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6d36335ef9bb4c8bbb3e0743cbd74a4b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "scene(center={'y': 31.8, 'x': -97.67}, layout=Layout(align_self='stretch', height='400px'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "feature_layer = scene.createLayer('feature')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Test point features\n",
     "\n",
@@ -50,9 +44,30 @@
     "]\n",
     "position = [{'x': city['lon'], 'y': city['lat']} for city in cities]\n",
     "\n",
-    "feature_layer = scene.createLayer('feature')\n",
-    "point_feature = feature_layer.createFeature('point', data=cities, position=position)\n",
-    "\n",
+    "point_feature = feature_layer.createFeature('point', data=cities, position=position)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0fd4ea23531641f7a3d60dee03f10a69",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "scene(center={'x': -97.67, 'y': 31.8}, layout=Layout(align_self='stretch', height='400px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
     "scene.center = { 'x': -97.67, 'y': 31.80 }\n",
     "scene.zoom = 4\n",
     "display(scene)"
@@ -60,24 +75,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pointFeature(data=[{'lat': 40.7127837, 'population': 8405837, 'lon': -74.0059413, 'name': 'New York'}, {'lat': 34.0522342, 'population': 3884307, 'lon': -118.2436849, 'name': 'Los Angeles'}, {'lat': 41.8781136, 'population': 2718782, 'lon': -87.6297982, 'name': 'Chicago'}, {'lat': 29.7604267, 'population': 2195914, 'lon': -95.3698028, 'name': 'Houston'}, {'lat': 39.9525839, 'population': 1553165, 'lon': -75.1652215, 'name': 'Philadelphia'}, {'lat': 33.4483771, 'population': 1513367, 'lon': -112.0740373, 'name': 'Phoenix'}], featureType='point', layer_id='05a1905cc00a449c9f3ad27b2115923e', position=[{'y': 40.7127837, 'x': -74.0059413}, {'y': 34.0522342, 'x': -118.2436849}, {'y': 41.8781136, 'x': -87.6297982}, {'y': 29.7604267, 'x': -95.3698028}, {'y': 39.9525839, 'x': -75.1652215}, {'y': 33.4483771, 'x': -112.0740373}])\n"
+      "pointFeature(data=[{'lon': -74.0059413, 'lat': 40.7127837, 'population': 8405837, 'name': 'New York'}, {'lon': -118.2436849, 'lat': 34.0522342, 'population': 3884307, 'name': 'Los Angeles'}, {'lon': -87.6297982, 'lat': 41.8781136, 'population': 2718782, 'name': 'Chicago'}, {'lon': -95.3698028, 'lat': 29.7604267, 'population': 2195914, 'name': 'Houston'}, {'lon': -75.1652215, 'lat': 39.9525839, 'population': 1553165, 'name': 'Philadelphia'}, {'lon': -112.0740373, 'lat': 33.4483771, 'population': 1513367, 'name': 'Phoenix'}], featureType='point', layer_id='376c4a1527704f889b7bb702b098d7b6', position=[{'x': -74.0059413, 'y': 40.7127837}, {'x': -118.2436849, 'y': 34.0522342}, {'x': -87.6297982, 'y': 41.8781136}, {'x': -95.3698028, 'y': 29.7604267}, {'x': -75.1652215, 'y': 39.9525839}, {'x': -112.0740373, 'y': 33.4483771}])\n"
      ]
     }
    ],
    "source": [
-    "print(point_feature)"
+    "print(point_feature)\n",
+    "# print(point_feature.style)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,13 +118,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "503765b31a4046ac95068569844f6de7",
+       "model_id": "ad608d09920c4056b338f64ee89caa48",
        "version_major": 2,
        "version_minor": 0
       },
