--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -32,6 +32,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "quad_feature = feature_layer.createFeature('quad')\n",
+    "quad_feature.data = [{\n",
+    "    'ul': {'x': -129.0625, 'y': 42.13468456089552},\n",
+    "    'lr': {'x': -100.9375, 'y': 29.348416310781797}\n",
+    "}]\n",
+    "# quad_feature.position = []\n",
+    "# quad_feature.color = 'magenta'\n",
+    "# quad_feature.opacity = 0.2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Test point features\n",
     "\n",
     "cities = [\n",
@@ -49,13 +65,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0fd4ea23531641f7a3d60dee03f10a69",
+       "model_id": "db5f082f3ed241558d111ac130e8896d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -89,6 +105,15 @@
    "source": [
     "print(point_feature)\n",
     "# print(point_feature.style)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quad_feature.opacity = 0.2\n"
    ]
   },
   {
