Add large-image example notebook

--- a/notebooks/raster-feature.ipynb
+++ b/notebooks/raster-feature.ipynb
@@ -8,7 +8,11 @@
     "\n",
     "Displaying images on quad features should be used sparingly, because the image data is first loaded into the kernel, then base64 encoded, and then sent to the browser. It is recommended to only use quad features with image files less than 1 MB.\n",
     "\n",
-    "Note that the 'image' passed to the feature's data item must be a base64 encoded string. Use the pygeojs.util.img2base64() method to load the image file and convert to base64.\n"
+    "Note that the 'image' passed to the feature's data item must be a base64 encoded string.\n",
+    "\n",
+    "* Use the ```pygeojs.util.img2base64()``` method to load the image file and convert to base64, and set the quad feature image.data to the base64 string.\n",
+    "* Do **not** set a quad feature's data.image to a local filename, because browser security will prevent it from loading into the display.\n",
+    "* You can *try* setting a quad feature data.image to an online url, but CORS and/or other browser-security restrictions generally block the display.\n"
    ]
   },
   {
@@ -38,11 +42,9 @@
     "\n",
     "# Add quad feature with image (png file)\n",
     "# Note that we must load the image and base64 encode its content.\n",
-    "# Cannot set image to filename because browser security will prevent load.\n",
-    "# Can *try* online url, but CORS restrictions are common.\n",
-    "\n",
-    "# pygeojs provides util function to construct base64 string\n",
+    "# pygeojs provides a util function to construct base64 string\n",
     "image_data = pygeojs.util.img2base64('simplergb.png')\n",
+    "\n",
     "# Download alternative:\n",
     "# url = 'https://data.kitware.com/api/v1/file/5caeb16c8d777f072b1ec7e9/download/rgb.png'\n",
     "# image_data = pygeojs.util.img2base64(url)\n",
