Add descriptive text to the example notebooks

--- a/notebooks/large-image.ipynb
+++ b/notebooks/large-image.ipynb
@@ -12,6 +12,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Initialize a scene and map layer"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -25,7 +32,16 @@
     "scene = pygeojs.scene()\n",
     "osm_layer = scene.createLayer('osm')\n",
     "scene.center = {'x': -122.4194, 'y': 37.7449}  # San Francisco 37.7749° N, 122.4194° W\n",
-    "scene.zoom = 7\n"
+    "scene.zoom = 8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Initialize second osm layer to display tiled image\n",
+    "\n",
+    "The girder host and item id are specific to the girder instance. This example does not authenticate with Girder, so the image must be in a public folder."
    ]
   },
   {
@@ -34,11 +50,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize second osm layer to display tiled image\n",
-    "\n",
-    "# The girder host and item id are specific to the girder instance.\n",
-    "# This example does not authenticate with Girder, so the image must be in a public folder.\n",
-    "\n",
     "girder_url = 'http://localhost:8989'\n",
     "item_id = '5c9fa550d2bef90006118224'  # SFBay_grayscale.tif\n",
     "tiles_url = pygeojs.util.get_tiles_url(girder_url, item_id)\n",
@@ -47,6 +58,13 @@
     "tile_layer = scene.createLayer('osm', url=tiles_url, keepLower=False, opacity=opacity)\n",
     "\n",
     "display(scene)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Add a slider widget for adjusting zoom"
    ]
   },
   {
@@ -62,16 +80,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Create second scene with tiled image and mapnik style\n",
+    "\n",
+    "The image tiles generated in Girder can be styled using mapnik style features. For a description the mapnik_style object, see the [MapnikTileSource.__init__() doc strings](https://github.com/girder/large_image/blob/02a253eb280e62876bc9e8ae27b9b37a12387afb/server/tilesource/mapniksource.py)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create new scene with tile image with mapnik style\n",
     "scene2 = pygeojs.scene()\n",
     "osm_layer2 = scene2.createLayer('osm')\n",
-    "scene2.center = {'x': -122.4194, 'y': 37.7449}  # San Francisco 37.7749° N, 122.4194° W\n",
-    "scene2.zoom = 7\n",
+    "scene2.center = {'x': -122.4194, 'y': 37.7449}\n",
+    "scene2.zoom = 8\n",
     "\n",
     "mapnik_style = {\n",
     "    'band': 1,\n",
