--- a/notebooks/raster-feature.ipynb
+++ b/notebooks/raster-feature.ipynb
@@ -16,6 +16,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Create scene and feature layer"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -33,6 +40,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Create quad feature with image (png file)\n",
+    "\n",
+    "Note that we must load the image and base64 encode its content. The pygeojs library provides a ```util.img2base64()``` function to construct base64 string.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -40,9 +56,6 @@
    "source": [
     "feature_layer.clear()\n",
     "\n",
-    "# Add quad feature with image (png file)\n",
-    "# Note that we must load the image and base64 encode its content.\n",
-    "# pygeojs provides a util function to construct base64 string\n",
     "image_data = pygeojs.util.img2base64('simplergb.png')\n",
     "\n",
     "# Download alternative:\n",
@@ -67,6 +80,13 @@
     "    }]\n",
     "quad_feature.opacity = 0.5\n",
     "display(scene)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Change the feature opacity and redraw"
    ]
   },
   {
