--- a/notebooks/vector-features.ipynb
+++ b/notebooks/vector-features.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Vector feature examples"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,16 +26,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature_layer = scene.createLayer('feature')\n"
+    "feature_layer = scene.createLayer('feature')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Create point feature with 6 data items"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,24 +61,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "27122d2d82d342c0941a832836ff0b96",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "scene(center={'x': -97.67, 'y': 31.8}, layout=Layout(align_self='stretch', height='400px'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "scene.center = { 'x': -97.67, 'y': 31.80 }\n",
     "scene.zoom = 4\n",
@@ -72,8 +71,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Create polygon feature"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,14 +90,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Create polyline feature"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Line from LA - Chicago - NY\n",
+    "# Line from LA to Chicago to NY\n",
     "line_data = [[{'x': -118, 'y': 34}, {'x': -88, 'y': 42}, {'x': -74, 'y': 41}]]\n",
-    "polygon  = feature_layer.createFeature('line', data=line_data)\n",
+    "polyline  = feature_layer.createFeature('line', data=line_data)\n",
     "scene.draw()"
    ]
   },
