--- a/notebooks/geojson.ipynb
+++ b/notebooks/geojson.ipynb
@@ -1,25 +1,19 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1332b080bf0d4f618a63b61edd3cc663",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "scene(center={'x': -99.0, 'y': 40.0}, layout=Layout(align_self='stretch', height='400px'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "source": [
+    "# GeoJSON example\n",
+    "\n",
+    "This notebook shows how to load a geojson file and display its features."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from IPython.display import display\n",
     "import pygeojs\n",
@@ -34,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
