--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -39,14 +39,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "feature_layer.clear()\n",
+    "\n",
     "quad_feature = feature_layer.createFeature('quad')\n",
     "quad_feature.data = [{\n",
     "    'ul': {'x': -129.0625, 'y': 42.13468456089552},\n",
     "    'lr': {'x': -100.9375, 'y': 29.348416310781797}\n",
     "}]\n",
     "# quad_feature.position = []\n",
-    "# quad_feature.color = 'magenta'\n",
-    "# quad_feature.opacity = 0.2\n"
+    "quad_feature.color = 'magenta'\n",
+    "quad_feature.opacity = 0.2\n"
    ]
   },
   {
@@ -72,13 +74,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quad_feature.color = '#ff0000'\n",
+    "quad_feature.opacity = 0.5\n",
+    "scene.draw()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "db5f082f3ed241558d111ac130e8896d",
+       "model_id": "7866498787664e2eae791e3e420db7e6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -116,16 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "quad_feature.opacity = 0.2\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,29 +143,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Add zoom slider\n",
-    "import ipywidgets as widgets\n",
-    "z = widgets.FloatSlider(min=1, max=12, value=scene.zoom, layout=dict(width='95%'))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ad608d09920c4056b338f64ee89caa48",
+       "model_id": "6fe7c66a3ec0480cafa0f1ce668d0df0",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "FloatSlider(value=4.728685, layout=Layout(width='95%'), max=12.0, min=1.0)"
+       "FloatSlider(value=4.0, layout=Layout(width='95%'), max=12.0, min=1.0)"
       ]
      },
      "metadata": {},
@@ -169,9 +162,34 @@
     }
    ],
    "source": [
+    "# Add zoom slider\n",
+    "import ipywidgets as widgets\n",
+    "z = widgets.FloatSlider(min=1, max=12, value=scene.zoom, layout=dict(width='95%'))\n",
     "newlink = widgets.jslink((z, 'value'), (scene, 'zoom'))\n",
     "display(z)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a0480f0b10284662bf0669f0490d67dc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=4.575856, layout=Layout(width='95%'), max=12.0, min=1.0)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
